IFS-3054 added unit tests and fixed already replied to invitation error

--- a/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-dashboard.html
+++ b/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-dashboard.html
@@ -201,7 +201,7 @@
             </div>
 
             <div class="interview-panel-invites" th:unless="${#lists.isEmpty(model.interviewPanelInvites)}">
-                <div class="progress-list"><h2 class="heading-medium">Invitations to interview panel(<span
+                <div class="progress-list"><h2 class="heading-medium">Invitations to interview panel (<span
                     th:text="${#lists.size(model.interviewPanelInvites)}"/>)</h2>
                     <ul>
                         <li th:each="interviewPanelInvite : ${model.interviewPanelInvites}" class="status-2-col">
@@ -210,7 +210,7 @@
                                     <a th:href="@{/invite/interview/{inviteHash}(inviteHash=${interviewPanelInvite.inviteHash})}"
                                        th:text="${interviewPanelInvite.competitionName}"/>
                                 </h3>
-                                <p>You have been asked to attend this interview panel. Please respond.</p>
+                                <p>You have been asked to attend an interview panel for this competition. Please respond.</p>
                             </div>
                         </li>
                     </ul>
