--- a/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-dashboard.html
+++ b/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-dashboard.html
@@ -217,6 +217,44 @@
                 </div>
             </div>
 
+            <div class="interview-panel-invites">
+                <th:block th:unless="${#lists.isEmpty(model.interviewPanelAccepted)}">
+                    <div class="progress-list"><h2 class="heading-medium no-margin-top">Interviews you have agreed to attend (<span
+                        th:text="${#lists.size(model.interviewPanelAccepted)}"/>)</h2>
+                        <ul>
+                            <li th:each="interviewPanelAccept : ${model.interviewPanelAccepted}">
+                                <div class="task">
+                                    <h3 class="heading-small">
+                                        <a th:href="@{/assessor/dashboard/competition/{competitionId}/panel(competitionId=${interviewPanelAccept.competitionId})}"
+                                           th:text="${interviewPanelAccept.competitionName}"/>
+                                    </h3>
+
+                                    <div th:if="${interviewPanelAccept.awaitingApplications == 0}">
+                                        Applications awaiting review will be added here.
+                                    </div>
+
+                                    <div th:if="${interviewPanelAccept.awaitingApplications > 0}" class="action-required">
+                                        <strong>
+                                            <span th:text="${interviewPanelAccept.awaitingApplications}" class="accepted-applications">COUNT
+                                            </span> applications awaiting review
+                                        </strong>
+                                    </div>
+                                </div>
+                                <div class="status">
+                                    <div class="status-msg msg-deadline">
+                                        <strong class="bold-medium days-remaining" th:text="${interviewPanelAccept.daysLeft}"></strong>
+                                        <br />days left <br />
+                                        Deadline
+                                        <span class="day" th:text="${#temporals.day(interviewPanelAccept.interviewDateDeadline)}">END DAY</span>
+                                        <span class="month" th:text="${#temporals.monthName(interviewPanelAccept.interviewDateDeadline)}">END MONTH</span>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </th:block>
+            </div>
+
             <h2 class="heading-medium">Your assessor details</h2>
             <ul class="list list-bullet">
                 <li>
