IFS-2313-Edit-Project-Duration
Change-Id: If40f451673d4559a461c03f88721a5068e84592a

--- a/ifs-web-service/ifs-project-setup-service/src/main/resources/templates/project/details-start-date.html
+++ b/ifs-web-service/ifs-project-setup-service/src/main/resources/templates/project/details-start-date.html
@@ -48,8 +48,7 @@
 
                 <h2 class="heading-medium">Project duration</h2>
                 <p>
-                    Project duration stated in your application:<br />
-                    <strong th:text="|${model.projectDurationInMonths} months|">9 months</strong>
+                    <span th:text="|${model.projectDurationInMonths} months|">9 months</span>
                 </p>
 
                 <button type="submit" class="button">Save</button>
