--- a/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/financecheck/summary.html
+++ b/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/financecheck/summary.html
@@ -25,13 +25,13 @@
     <div class="column-half">
       <h2 class="heading-medium">Project finances</h2>
       <dl class="standard-definition-list">
-        <dt>Total project cost</dt>
+        <dt>Total project cost:</dt>
         <dd>&pound;<th:block th:text="${#numbers.formatInteger(model.financeCheckSummaryResource.totalProjectCost,1,'DEFAULT')}" /></dd>
-        <dt>Grant applied for</dt>
+        <dt>Grant applied for:</dt>
         <dd>£<th:block  th:text="${#numbers.formatInteger(model.financeCheckSummaryResource.grantAppliedFor,1,'DEFAULT')}" /></dd>
-        <dt>Other public sector funding</dt>
+        <dt>Other public sector funding:</dt>
         <dd>£<th:block  th:text="${#numbers.formatInteger(model.financeCheckSummaryResource.otherPublicSectorFunding,1,'DEFAULT')}" /></dd>
-        <dt>Total &#37; grant</dt>
+        <dt>Total percentage grant:</dt>
         <dd th:text="${#numbers.formatInteger(model.financeCheckSummaryResource.totalPercentageGrant,1,'NONE')+'%'}"></dd>
       </dl>
       <a th:href="@{/project/{projectId}/finance-check-overview(projectId=${model.financeCheckSummaryResource.projectId})}">View finances</a>
@@ -39,11 +39,11 @@
     <div class="column-half">
       <h2 class="heading-medium">Project details</h2>
       <dl class="standard-definition-list">
-        <dt>Project title</dt>
+        <dt>Project title:</dt>
         <dd th:text="${model.financeCheckSummaryResource.projectName}"></dd>
-        <dt>Start date</dt>
+        <dt>Start date:</dt>
         <dd th:text="${#temporals.format(model.financeCheckSummaryResource.projectStartDate, 'd MMM yyyy')}"></dd>
-        <dt>Duration</dt>
+        <dt>Duration:</dt>
         <dd th:text="${model.financeCheckSummaryResource.durationInMonths+' months'}"></dd>
       </dl>
 
