--- a/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-interview-invite.html
+++ b/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-interview-invite.html
@@ -29,7 +29,7 @@
         <div class="form-group" th:classappend="${#fields.hasErrors('acceptInvitation')} ? 'form-group-error'">
             <fieldset>
                 <legend id="acceptInvitation">
-                    <span class="heading-medium">Are you able to attend the assessment panel?</span>
+                    <span class="heading-medium">Are you able to attend the interview panel?</span>
                     <br>
                     <th:block th:if="${#fields.hasErrors('acceptInvitation')}">
                         <span class="error-message" th:each="err : ${#fields.errors('acceptInvitation')}" th:text="${err}" />
