--- a/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessment/application-detailed-finances.html
+++ b/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessment/application-detailed-finances.html
@@ -4,12 +4,11 @@
         <th:block th:insert="fragments/layout :: head" th:with="pageTitle='Funding'" />
     </head>
 
-    <body th:with="context='assessment'" class="assessment assessment-finances-summary">
+    <body class="assessment assessment-finances-summary">
         <th:block th:insert="fragments/layout :: body-start" />
         <th:block th:insert="fragments/layout :: global-header" />
 
         <main tabindex="-1" id="content">
-            <th:block th:insert="fragments/layout :: main-content-start" />
             <th:block th:insert="fragments/assessment :: assessment-header-sub (linkTitle='Back to funding',linkClass='link-back',linkUrl=@{/{id}/finances(id=${model.assessmentId})})" />
 
             <th:block th:with="applicationName=${#strings.isEmpty(model.applicationName)} ? #{ifs.application.no_title} : ${model.applicationName}">
@@ -57,5 +56,6 @@
 
         <th:block th:insert="fragments/layout :: footer" />
         <th:block th:insert="fragments/layout :: body-end" />
+        <th:block th:insert="fragments/service-layout :: body-end" />
     </body>
 </html>
