--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/competition/inform-ineligible.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/competition/inform-ineligible.html
@@ -14,31 +14,43 @@
 
     <div class="page-title">
         <h1 class="heading-xlarge">
-            <span class="heading-secondary" th:text="${model.competitionName}">Technology inspired</span>
+            <span class="heading-secondary" th:text="|${model.competitionId}: ${model.competitionName}|">9876: Technology inspired</span>
             Inform lead applicant
         </h1>
     </div>
 
     <p class="heading-medium">Application:</p>
-    <p th:text="${model.applicationName}"/>
+    <p th:text="|${model.applicationId}: ${model.applicationName}|"/>
 
-    <p>The following email will be sent to the lead applicant, after which this application will be no longer available for assessment.</p>
+    <div class="message-alert">The following email will be sent to the lead applicant, after which this application will be no longer available for assessment.</div>
 
     <p class="heading-medium" th:text="|Recipient: ${model.leadApplicant}|">Dave smith</p>
 
     <form th:action="@{/competition/application/{applicationId}/ineligible/send(applicationId=${model.applicationId})}" method="post" enctype="multipart/form-data" th:object="${form}">
         <div class="form-group">
             <label class="form-label-bold" for="subject">Subject</label>
-            <input class="form-control width-full" id="subject" type="text" th:field="*{subject}" />
+            <input class="form-control width-full"
+                   id="subject"
+                   type="text"
+                   required="required"
+                   th:field="*{subject}"
+                   th:attr="data-required-errormessage=#{validation.informleadapplicant.subject.required}"   />
         </div>
 
         <div class="form-group">
             <label class="form-label-bold" for="message">Message</label>
-            <textarea id="message" rows="16" class="form-control width-full" th:field="*{content}"></textarea>
+            <textarea id="message"
+                      rows="16"
+                      class="form-control width-full"
+                      required="required"
+                      th:field="*{content}"
+                      th:attr="data-required-errormessage=#{validation.informleadapplicant.message.required}"></textarea>
         </div>
 
-        <div class="alignright">
-            <button type="submit" class="button button-large">Send</button>
+        <div class="extra-margin">
+            <button type="submit" class="button">Send</button>
+            <a th:href="@{/competition/{competitionId}/applications/ineligible(competitionId=${model.competitionId})}"
+               class="button button-clear">Cancel</a>
         </div>
     </form>
 
