--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/competition/public-content-menu.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/competition/public-content-menu.html
@@ -41,21 +41,11 @@
                 <div th:if="${model.isSectionComplete(section)}" class="task-status-complete"><span>Complete</span></div>
             </li>
         </ul>
-        <div class="extra-margin">
-            <p th:if="${model.hasBeenPublished()}"
-                th:with="publishDay=${#temporals.format(model.publishDate, 'd MMMM yyyy')},
-                         publishTime=${#strings.toLowerCase(#temporals.format(model.publishDate, ' h:mma'))}">
-                <small th:text="${'Last published ' + publishDay + ' ' + publishTime}"></small></p>
-            <div class="grid-row">
-                <div class="column-half">
-                    <a th:unless="${model.competition.nonIfs}" th:href="@{/competition/setup/{competitionId}(competitionId=${model.competition.id})}" class="button">Return to setup overview</a>
-                    <a th:if="${model.competition.nonIfs}" th:href="@{/non-ifs-competition/setup/{competitionId}(competitionId=${model.competition.id})}" class="button">Return to non-IFS competition details</a>
-                </div>
-                <div class="column-half alignright">
-                    <button th:unless="${model.hasBeenPublished()}" class="button-secondary no-margin" th:disabled="${model.disablePublishButton()}" name="publish">Publish content</button>
-                </div>
-            </div>
-        </div>
+        <p th:if="${model.hasBeenPublished()}"
+            th:with="publishDay=${#temporals.format(model.publishDate, 'd MMMM yyyy')},
+                     publishTime=${#strings.toLowerCase(#temporals.format(model.publishDate, ' h:mma'))}">
+            <small th:text="${'Last published ' + publishDay + ' ' + publishTime}"></small></p>
+        <button th:unless="${model.hasBeenPublished()}" class="button" th:disabled="${model.disablePublishButton()}" name="publish">Publish content</button>
     </form>
 
     <ul class="pagination" th:unless="${model.competition.nonIfs}">
@@ -66,6 +56,11 @@
             </a>
         </li>
     </ul>
+
+    <div class="extra-margin">
+        <a th:unless="${model.competition.nonIfs}" th:href="@{/competition/setup/{competitionId}(competitionId=${model.competition.id})}" class="button-secondary">Return to setup overview</a>
+        <a th:if="${model.competition.nonIfs}" th:href="@{/non-ifs-competition/setup/{competitionId}(competitionId=${model.competition.id})}" class="button-secondary">Return to non-IFS competition details</a>
+    </div>
 
     <th:block th:insert="fragments/layout :: main-content-end" />
 </main>
