IFS-2920-Proj-Location-Per-Partner
View Changes and properties file.

Change-Id: I0f12b35c1f4cd9569a7e3c3f76a6d5061531ca80

--- a/ifs-web-service/ifs-project-setup-service/src/main/resources/templates/project/detail.html
+++ b/ifs-web-service/ifs-project-setup-service/src/main/resources/templates/project/detail.html
@@ -88,7 +88,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr th:each="organisation: ${model.partnerOrganisations}">
+            <tr th:each="organisation: ${model.organisations}">
                 <td>
                     <th:block th:if="${model.isUserPartnerInOrganisation(organisation.id) and !model.isReadOnly() and !model.grantOfferLetterGenerated}">
                         <a th:href="@{/project/{id}/details/finance-contact?organisation={orgId}(id=${model.project.getId()},orgId=${organisation.id})}" th:text="${organisation.name}">organisation name</a>
