--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/send-invites.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/send-invites.html
@@ -26,7 +26,12 @@
             <form th:action="@{/competition/{competitionId}/assessors/invite/send(competitionId=${model.competitionId})}" method="post" enctype="multipart/form-data" th:object="${form}">
                 <div class="form-group extra-margin-bottom">
                     <label class="form-label-bold" for="subject">Subject</label>
-                    <input class="form-control width-full" id="subject" type="text" th:field="*{subject}" />
+                    <input class="form-control width-full"
+                           id="subject"
+                           type="text"
+                           th:field="*{subject}"
+                           required="required"
+                           th:attr="data-required-errormessage=#{validation.inviteAssessors.subject.required}"  />
                 </div>
 
                 <h3 class="heading-small">Message</h3>
