IFS-3143 adding invite url to email text.

--- a/ifs-data-layer/ifs-data-service/src/main/java/org/innovateuk/ifs/notifications/templates/notifications/email/invite_assessor_group_to_interview_text_html.html
+++ b/ifs-data-layer/ifs-data-service/src/main/java/org/innovateuk/ifs/notifications/templates/notifications/email/invite_assessor_group_to_interview_text_html.html
@@ -8,7 +8,7 @@
 
         <p>We recognise your expertise and would greatly appreciate your comments on the scientific or business merit of the applications assigned to the interview panel.</p>
 
-        <p>Please visit our online Innovation Funding Service to respond to this request.</p>
+        <p>Please visit our online Innovation Funding Service to respond to this request: <a href="${inviteUrl}">${inviteUrl}</a></p>
 
         <p style="margin: 0 0 1em 0;">
             ${message?no_esc}
