--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/registration/error.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/registration/error.html
@@ -16,5 +16,6 @@
 
 <th:block th:insert="fragments/layout :: footer" />
 <th:block th:insert="fragments/layout :: body-end" />
+<th:block th:insert="fragments/service-layout :: body-end" />
 </body>
 </html>
