IFS-2780 fixing redirect and disabling resend button.

--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/interview-overview.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/interview-overview.html
@@ -108,9 +108,8 @@
                         <span data-count-selected="" th:text="${#lists.size(interviewOverviewSelectionForm.selectedInviteIds)}"></span> assessors selected</span>
                     </div>
                     <div class="column-half select-all alignright">
-                        <button class="button" name="resendInvites" data-submit-el="" th:attr="disabled=${#lists.isEmpty(interviewOverviewSelectionForm.selectedInviteIds)}">
-                            Resend invites
-                        </button>
+                        <!--/* <button class="button" name="resendInvites" data-submit-el="" th:attr="disabled=${#lists.isEmpty(interviewOverviewSelectionForm.selectedInviteIds)}">Resend invites</button> */-->
+                        <button class="button" disabled="disabled">Resend invites</button>
                     </div>
                 </div>
 
