--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/competition/inform-ineligible.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/competition/inform-ineligible.html
@@ -27,9 +27,7 @@
     <p class="heading-medium">Application:</p>
     <p th:text="|${model.applicationId}: ${model.applicationName}|"/>
 
-    <div class="message-alert">The following email will be sent to the lead applicant after which the application will not be available for assessment.
-
-    </div>
+    <div class="message-alert">The following email will be sent to the lead applicant after which the application will not be available for assessment.</div>
 
     <p class="heading-medium" th:text="|Recipient: ${model.leadApplicant}|">Dave smith</p>
 
